# mvptrading

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
.claude/: settings.local.json
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  pytest.ini  requirements.txt
backend/app/: config.py  main.py  schemas.py  websocket_manager.py
backend/app/api/: __init__.py  analytics.py  journal.py  lessons.py  symbols.py
backend/app/core/: __init__.py  database.py  deps.py
backend/app/db/: __init__.py  models.py
backend/app/domain/: __init__.py  journal.py  lesson.py  reports.py
backend/app/providers/: __init__.py  base.py  binance.py  registry.py  twelvedata.py
backend/app/routers/: snapshot.py  ws.py
backend/app/services/: analytics.py  llm_client.py  market_feed.py  market_poller.py  reasoning.py  signal_engine.py
backend/app/services/journal/: repository.py  service.py
backend/app/services/lessons/: generator.py  prompts.py  repository.py
backend/app/services/market/: signal_logger.py
backend/app/services/reports/: __init__.py  accuracy.py  market_stats.py  outcome_tracker.py  performance.py  sessions.py
backend/app/services/symbols/: catalog.py  service.py
backend/data/: mvptrading.db
backend/tests/: test_analytics.py  test_health.py  test_journal.py  test_market_feed.py  test_market_poller.py  test_outcome_tracker.py  test_providers.py  test_reasoning.py  test_reasoning_llm.py  test_signal_engine.py  test_snapshot.py  test_ws.py
frontend/: .dockerignore  .env.example  Dockerfile  (+6 more)
(+50 files in other folders)
